test/__snapshots__/index.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fail if a file is tried to be loaded from include paths and with webpack's resolver simultaneously 1`] = `
"Module build failed (from ./src/cjs.js):


@import \\"some/module.less\\";
@import \\"~some/module.less\\";
^
'~some/module.less' wasn't found. Tried - /test/fixtures/less/~some/module.less,/test/fixtures/node_modules/~some/module.less,npm://~some/module.less,~some/module.less
      in /test/fixtures/less/error-mixed-resolvers.less (line 3, column 0)"
`;

exports[`should provide a useful error message if the import could not be found 1`] = `
"Module build failed (from ./src/cjs.js):


@import \\"not-existing\\";
^
Can't resolve './not-existing.less' in '/test/fixtures/less'
      in /test/fixtures/less/error-import-not-existing.less (line 1, column 0)"
`;

exports[`should provide a useful error message if there was a syntax error 1`] = `
"Module build failed (from ./src/cjs.js):


but this is a syntax error

^
Unrecognised input. Possibly missing something
      in /test/fixtures/less/error-syntax.less (line 6, column 0)"
`;
